<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0FFFFFFF" >

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/etPassword"
        android:layout_centerInParent="true"
        android:ems="8"
        android:inputType="textEmailAddress"
        android:hint="@string/inputEmail"
        android:autofillHints="что это???"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/inputPassword"
        android:autofillHints="ЧТО ЭТО БЛ?"/>

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/sign_in"
        android:textSize="12sp"
        app:backgroundTint="@color/teal_200" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/etEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="45dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/tv_login"
        android:textSize="36sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnSignIn"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="9dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/tv_create_a_new_account" />

    <TextView
        android:id="@+id/tvSign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnSignIn"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="9dp"
        android:layout_toRightOf="@id/tvCreate"
        android:fontFamily="sans-serif-black"
        android:text="@string/tv_signUp"
        android:layout_toEndOf="@id/tvCreate" />
</RelativeLayout>